created course table and added repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/postgres
-jdbc.username=postgres
-jdbc.password=u_pick_it
-jdbc.jpa.hibernate.ddl-auto=create
-jdbc.jpa.show-sql=true
-hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username= postgres
+spring.datasource.password= u_pick_it
 
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#hibernate.dialect.storage_engine=innodb
-#spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
+
+#logging.level.root=WARN
+#logging.level.org.springframework=TRACE
+
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://localhost:5432/postgres
+#jdbc.username=postgres
+#jdbc.password=u_pick_it
+#jdbc.jpa.hibernate.ddl-auto=create
+#jdbc.jpa.show-sql=true
+#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
